k8s/apps/metube/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: metube
  namespace: metube
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "MeTube"
    gethomepage.dev/description: "YouTube downloader"
    gethomepage.dev/group: "tools"
    gethomepage.dev/icon: "metube.png"
    gethomepage.dev/href: "https://metube.item.fyi"
    gethomepage.dev/siteMonitor: "http://metube.metube.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=metube"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`metube.item.fyi`)
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
  tls: {}
